
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-elasticity-lab"
version = "0.1.0"
description = "Estimate elasticity, simulate price shifts, and quantify likely revenue tradeoffs by segment."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
